force-app/main/default/objects/Social_Post_Settings__mdt/Social_Post_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Social Post Settings</label>
    <pluralLabel>Social Post Settings</pluralLabel>
</CustomObject>