force-app/main/default/objects/Social_Post_Settings__mdt/fields/Facebook_Page_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Page_Access_Token__c</fullName>
    <label>Facebook_Page_Access_Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>