force-app/main/default/objects/Social_Post_Settings__mdt/fields/Facebook_Page_Id__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Page_Id__c</fullName>
    <label>Facebook Page Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>