force-app/main/default/objects/Social_Post_Settings__mdt/fields/Post_to_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Post_to_Facebook__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Post to Facebook</label>
    <type>Checkbox</type>
</CustomField>